zsh: Add custom 'cygwin' plugin

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-* Refine and add 'cyglink' function (https://gist.github.com/ZeroKnight/8975735/revisions)
-
+* Modify ls aliases to use colorizing tricks
+    + alias ls='ls --color'
+    + alias less='less -R'
